Hide score form + FIX overflow result

--- a/ocenki/assets/css/style.css
+++ b/ocenki/assets/css/style.css
@@ -4,6 +4,7 @@
   border-radius: .25rem;
   padding: .375rem .75rem;
   color: #495057;
+  overflow-y: scroll;
 }
 
 mark {
